testing ugly solution to overlapping-bug

--- a/css/aliceStyle.css
+++ b/css/aliceStyle.css
@@ -9,6 +9,7 @@ body {
 .page {
     height: 100vh;
     min-height: fit-content;
+    display: block;
 }
 
 .alice {
